# hummingbot

./: .coveragerc  .deepsource.toml  .dockerignore  .env  .env.example  .flake8  .gitattributes  .gitconfig  .gitignore  .gitmodules  .mcp.json  .pre-commit-config.yaml  .windsurfrules  ACTIVE_POSITIONS_DATABASE_FIX_2025-11-02.md  AGENTS.md  ASTERDEX_404_FIX.md  ASTERDEX_404_SOLUTIONS.md  ASTERDEX_CONNECTOR_FIXES.md  ASTERDEX_FINAL_FIXES.md  ASTERDEX_FIXES_SUMMARY.md  BATCH_CANCEL_FIX_APPLIED.md  BATCH_CANCEL_INVESTIGATION.md  CLAUDE.md  CLEANUP_SCRIPT_AUTO_EXECUTION_BUG_FIX.md  CODE_CLEANUP_UNUSED_CLASS_2025-11-02.md  CODE_OF_CONDUCT.md  COINSXYZ_TEST_FIXES_SUMMARY.md  CONTRIBUTING.md  CURSOR_VSCODE_SETUP.md  Connector.mm  DATA_COLLECTION.md  DECIBEL_CONTEXT.md  DOCKER.md  DOCKER_DEPLOYMENT.md  DUAL_STRATEGY_SETUP.md  Dockerfile  Dockerfile.arm  Dockerfile.arm_new  Dockerfile.arm_without_conda  Dockerfile.conda  (+166 more)
.circleci/: DOCKER.md  (+3 more)
NPC_G2/resources/hummingbot-master/: .flake8  compile  pyproject.toml
NPC_G2/resources/hummingbot-master/.github/: CODEOWNERS
NPC_G2/resources/hummingbot-master/controllers/generic/: xgridt.py
NPC_G2/resources/hummingbot-master/controllers/market_making/: pmm_dynamic.py
NPC_G2/resources/hummingbot-master/hummingbot/client/: performance.py
NPC_G2/resources/hummingbot-master/hummingbot/client/command/: create_command.py
NPC_G2/resources/hummingbot-master/hummingbot/client/command/silly_resources/: dennis_4.txt  dennis_loading_2.txt  jack_2.txt  rein_1.txt
NPC_G2/resources/hummingbot-master/hummingbot/client/config/: config_helpers.py
NPC_G2/resources/hummingbot-master/hummingbot/client/ui/: scroll_handlers.py
NPC_G2/resources/hummingbot-master/hummingbot/connector/derivative/binance_perpetual/: binance_perpetual_constants.py  binance_perpetual_user_stream_data_source.py
NPC_G2/resources/hummingbot-master/hummingbot/connector/derivative/bitget_perpetual/: bitget_perpetual_user_stream_data_source.py
NPC_G2/resources/hummingbot-master/hummingbot/connector/derivative/bybit_perpetual/: bybit_perpetual_auth.py  bybit_perpetual_derivative.py  bybit_perpetual_utils.py
NPC_G2/resources/hummingbot-master/hummingbot/connector/derivative/dydx_v4_perpetual/: dydx_v4_perpetual_derivative.py
NPC_G2/resources/hummingbot-master/hummingbot/connector/derivative/gate_io_perpetual/: gate_io_perpetual_user_stream_data_source.py
NPC_G2/resources/hummingbot-master/hummingbot/connector/derivative/hashkey_perpetual/: hashkey_perpetual_web_utils.py
NPC_G2/resources/hummingbot-master/hummingbot/connector/exchange/ascend_ex/: ascend_ex_utils.py
NPC_G2/resources/hummingbot-master/hummingbot/connector/exchange/bing_x/: bing_x_exchange.py
NPC_G2/resources/hummingbot-master/hummingbot/connector/exchange/bitrue/: bitrue_auth.py
NPC_G2/resources/hummingbot-master/hummingbot/connector/exchange/btc_markets/: btc_markets_order_book.py
NPC_G2/resources/hummingbot-master/hummingbot/connector/exchange/bybit/: bybit_constants.py  bybit_utils.py
NPC_G2/resources/hummingbot-master/hummingbot/connector/exchange/cube/: cube_order_book.py
NPC_G2/resources/hummingbot-master/hummingbot/connector/exchange/derive/: derive_auth.py
NPC_G2/resources/hummingbot-master/hummingbot/core/cpp/: compile.sh
NPC_G2/resources/hummingbot-master/hummingbot/core/data_type/: LimitOrder.pxd
NPC_G2/resources/hummingbot-master/hummingbot/core/event/: event_forwarder.py  event_logger.pyx  event_reporter.pyx
NPC_G2/resources/hummingbot-master/hummingbot/core/rate_oracle/: utils.py
NPC_G2/resources/hummingbot-master/hummingbot/data_feed/: wallet_tracker_data_feed.py
NPC_G2/resources/hummingbot-master/hummingbot/data_feed/liquidations_feed/: liquidations_factory.py
NPC_G2/resources/hummingbot-master/hummingbot/logger/: __init__.py
NPC_G2/resources/hummingbot-master/hummingbot/model/: controllers.py  decimal_type_decorator.py  executors.py  metadata.py
NPC_G2/resources/hummingbot-master/hummingbot/strategy/: asset_price_delegate.pxd
NPC_G2/resources/hummingbot-master/hummingbot/strategy/avellaneda_market_making/: avellaneda_market_making.pxd
NPC_G2/resources/hummingbot-master/hummingbot/strategy/cross_exchange_mining/: cross_exchange_mining_config_map_pydantic.py  cross_exchange_mining_pair.py
NPC_G2/resources/hummingbot-master/hummingbot/strategy/hedge/: start.py
NPC_G2/resources/hummingbot-master/hummingbot/strategy/liquidity_mining/: start.py
NPC_G2/resources/hummingbot-master/hummingbot/strategy/pure_market_making/: pure_market_making.pyx  start.py
NPC_G2/resources/hummingbot-master/hummingbot/strategy/spot_perpetual_arbitrage/: arb_proposal.py  start.py
NPC_G2/resources/hummingbot-master/hummingbot/strategy/twap/: __init__.py
NPC_G2/resources/hummingbot-master/hummingbot/strategy_v2/controllers/: __init__.py
NPC_G2/resources/hummingbot-master/hummingbot/strategy_v2/models/: executors.py
NPC_G2/resources/hummingbot-master/hummingbot/templates/: conf_amm_arb_strategy_TEMPLATE.yml  conf_amm_v3_lp_strategy_TEMPLATE.yml
NPC_G2/resources/hummingbot-master/scripts/: v2_xemm.py
NPC_G2/resources/hummingbot-master/scripts/community/: simple_vwap_no_config.py
NPC_G2/resources/hummingbot-master/setup/: environment.yml
NPC_G2/resources/hummingbot-master/test/hummingbot/core/: test_py_time_iterator.py
NPC_G2/resources/hummingbot-master/test/hummingbot/data_feed/: test_wallet_tracker_data_feed.py
NPC_G2/resources/hummingbot-master/test/mock/: http_recorder.py  mock_api_order_book_data_source.py
pysui_utils/: .env  .gitignore  pyproject.toml
pysui_utils/contracts/deepbook/: Move.toml  README.md  Suibase.toml
pysui_utils/contracts/deepbook/sources/: clob.move  clob_v2.move  critbit.move  custodian.move  custodian_v2.move  order_query.move
pysui_utils/contracts/deepbook/tests/: critbit_tests.move  order_query_tests.move
pysui_utils/scripts/: DeepbookConnector.py  sui_client_config.py
pysui_utils/src/pysui_utils/: DeepbookConnector.py  __init__.py  create_pool.py  sui_client_config.py
pysui_utils/tests/: test_DeepbookConnector.py
(+10454 files in other folders)
