[project]
name = "hummingbot"
version = "20260302"
description = "Hummingbot"
authors = [{name = "Hummingbot Foundation", email = "dev@hummingbot.org"}]
requires-python = ">=3.10"
license = {text = "Apache-2.0"}

[project.scripts]
hummingbot = "bin.hummingbot_quickstart:main"

[tool.pytest.ini_options]
testpaths = ["test"]
python_files = ["test_*.py"]
asyncio_default_fixture_loop_scope = "function"
addopts = "--strict-markers"
asyncio_mode = "auto"

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[build-system]
requires = ["setuptools", "wheel", "numpy>=2.2.6", "cython>=3.0.12"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["hummingbot", "hummingbot.*"]
exclude = [
    "hummingbot.connector.gateway.clob_spot.data_sources.injective",
    "hummingbot.connector.gateway.clob_perp.data_sources.injective_perpetual",
]

[tool.setuptools.package-data]
hummingbot = ["core/cpp/*", "VERSION", "templates/*TEMPLATE.yml"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-arm64"]
[tool.pixi.dependencies]
# Build/install
python = ">=3.10.12,<3.13"
cython = ">=3.0.12"
maturin = ">=1.5"
setuptools = ">=80.8.0"
pip = ">=23.2.1"
# Core runtime
aiohttp = ">=3.8.5"
aioprocessing = ">=2.0.1"
aioresponses = ">=0.7.4"
aiounittest = ">=1.4.2"
async-timeout = ">=4.0.2,<5"
asyncssh = ">=2.13.2"
base58 = ">=2.1.1"
bidict = ">=0.22.1"
bip-utils = "*"
cachetools = ">=5.3.1"
cryptography = ">=41.0.2"
eth-account = ">=0.13.0"
injective-py = ">=1.12"
libta-lib = ">=0.6.4"
msgpack-python = "*"
numba = "==0.61.2"
numpy = ">=2.2.6"
objgraph = "*"
pandas = ">=2.3.2"
prompt_toolkit = ">=3.0.39"
protobuf = ">=4.23.3"
psutil = ">=5.9.5"
ptpython = ">=3.0.26"
pydantic = ">=2"
pyjwt = ">=2.3.0"
pyperclip = ">=1.8.2"
pyyaml = ">=6.0"
requests = ">=2.31.0"
"ruamel.yaml" = ">=0.2.5"
rust = "*"
safe-pysha3 = "*"
scipy = ">=1.11.1"
six = ">=1.16.0"
sqlalchemy = ">=1.4.49"
ta-lib = ">=0.6.4"
tabulate = "==0.9.0"
tqdm = ">=4.67.1"
ujson = ">=5.7.0"
urllib3 = ">=1.26.15,<2.0"
web3 = "*"
xrpl-py = "==4.4.0"
zlib = ">=1.2.13"

[tool.pixi.pypi-dependencies]
commlib-py = ">=0.11"
# eip712-structs excluded: depends on pysha3 which can't build on 3.12+
# conda safe-pysha3 provides sha3 at runtime; install manually: pip install --no-deps eip712-structs
hb-candles-feed = { path = "sub-packages/candles-feed", editable = true }
pandas-ta = ">=0.4.71b"
scalecodec = "*"
solders = ">=0.19.0"

[tool.pixi.feature.dev.dependencies]
pytest = ">=7.4.0"
pytest-asyncio = ">=0.16.0"
pytest-cov = "*"
pytest-mock = "*"
pytest-timeout = ">=2.1.0"
coverage = ">=7.2.7"
diff-cover = ">=7.7.0"
ruff = "*"
mypy = "*"
pre-commit = ">=3.3.3"
cython-lint = "*"

[tool.pixi.feature.ci.dependencies]
bandit = "*"
pip-audit = "*"
types-setuptools = "*"

[tool.pixi.environments]
default = { features = ["dev"], solve-group = "default" }
ci = { features = ["ci", "dev"], solve-group = "default" }
# py310/py311/py312 removed: pandas-ta/numba version conflicts

[tool.pixi.tasks]
install-dev = "pip install --no-build-isolation -e ."
build = { cmd = "python setup.py build_ext --inplace", depends-on = ["install-dev"] }
rust-build = { cmd = "maturin develop --manifest-path hummingbot/rust/Cargo.toml", depends-on = ["install-dev"] }
test = { cmd = "pytest test", depends-on = ["build"] }
test-unit = { cmd = "pytest test/hummingbot", depends-on = ["build"] }
test-fast = "pytest --timeout=30 --tb=short -q"
lint = "ruff check hummingbot test"
lint-cython = "cython-lint hummingbot"
format = "ruff format hummingbot test"
format-check = "ruff format --check hummingbot test"
type-check = "mypy hummingbot"
security-scan = "bandit -c pyproject.toml -r hummingbot/"
dependency-scan = { cmd = "pip-audit --strict --desc on", depends-on = ["install-dev"] }
quality-gate = { depends-on = ["quality", "type-check"] }
quality = { depends-on = ["lint", "format-check"] }
check = { depends-on = ["quality", "test"] }
hooks-install = "pre-commit install"
submodule-update = "git submodule update --remote sub-packages/candles-feed"
compat-import = { cmd = "python ci/check_subpackage_compat.py import", depends-on = ["install-dev"] }
compat-contract = { cmd = "python ci/check_subpackage_compat.py contract", depends-on = ["install-dev"] }
compat-integration = { cmd = "pytest sub-packages/candles-feed/tests/unit/test_compatibility.py sub-packages/candles-feed/tests/unit/test_hummingbot_integration.py -v --timeout=30", depends-on = ["install-dev"] }
compat-check = { depends-on = ["compat-import", "compat-contract", "compat-integration"] }
migrate-pytest = { cmd = "python $HOME/PycharmProjects/refactor-applications/refactor/rules/pytest_migration.py -d --apply --verbose test/", env = { PYTHONPATH = "$HOME/PycharmProjects/refactor-applications:$PYTHONPATH" } }
migrate-pytest-dry = { cmd = "python $HOME/PycharmProjects/refactor-applications/refactor/rules/pytest_migration.py -d --verbose test/", env = { PYTHONPATH = "$HOME/PycharmProjects/refactor-applications:$PYTHONPATH" } }

[tool.isort]
line_length = 120
multi_line_output = 3
include_trailing_comma = true
use_parentheses = true
ensure_newline_before_comments = true
combine_as_imports = true
filter_files = true
skip = ["setup.py"]

[tool.ruff]
line-length = 120
target-version = "py310"
include = ["hummingbot/**/*.py", "test/**/*.py"]

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E251", "E501", "E702"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
ignore_missing_imports = true
follow_imports = "silent"
disallow_untyped_defs = false
check_untyped_defs = false
exclude = [
    "hummingbot/connector/gateway",
    "hummingbot/connector/derivative/injective_v2",
    "hummingbot/core/cpp",
]

[tool.bandit]
skips = [
    "B101",  # assert used — standard in trading logic
    "B110",  # try-except-pass — common async pattern
    "B311",  # random — not used for crypto keys
    "B324",  # hashlib — used for API signatures, not passwords
    "B404",  # import_subprocess — flagged by importing subprocess
    "B603",  # subprocess_without_shell_equals_true
    "B607",  # start_process_with_partial_path
    "B105",  # hardcoded_password_string — false positives on config defaults
    "B106",  # hardcoded_password_funcarg — false positives on config defaults
    "B107",  # hardcoded_password_default — false positives ("USDT" as default)
    "B112",  # try_except_continue — common async pattern
    "B608",  # hardcoded_sql_expressions — local SQLite, not user-facing
]

[tool.cython-lint]
max-line-length = 999

[tool.coverage.run]
source_pkgs = ["hummingbot"]
branch = true
dynamic_context = "test_function"
omit = [
    "hummingbot/core/gateway/*",
    "hummingbot/core/management/*",
    "hummingbot/client/config/config_helpers.py",
    "hummingbot/client/config/conf_migration.py",
    "hummingbot/client/config/security.py",
    "hummingbot/client/hummingbot_application.py",
    "hummingbot/client/command/*",
    "hummingbot/client/settings.py",
    "hummingbot/client/ui/completer.py",
    "hummingbot/client/ui/layout.py",
    "hummingbot/client/tab/*",
    "hummingbot/client/ui/parser.py",
    "hummingbot/connector/derivative/position.py",
    "hummingbot/connector/derivative/dydx_v4_perpetual/*",
    "hummingbot/connector/derivative/dydx_v4_perpetual/data_sources/*",
    "hummingbot/connector/exchange/injective_v2/account_delegation_script.py",
    "hummingbot/connector/exchange/mexc/protobuf/*",
    "hummingbot/connector/exchange/paper_trade*",
    "hummingbot/connector/gateway/**",
    "hummingbot/connector/test_support/*",
    "hummingbot/core/utils/gateway_config_utils.py",
    "hummingbot/core/utils/kill_switch.py",
    "hummingbot/core/utils/wallet_setup.py",
    "hummingbot/connector/mock*",
    "hummingbot/strategy/*/start.py",
    "hummingbot/strategy/dev*",
    "hummingbot/user/user_balances.py",
    "hummingbot/connector/exchange/cube/cube_ws_protobufs/*",
    "hummingbot/connector/exchange/ndax/*",
    "hummingbot/strategy/amm_arb/*",
    "hummingbot/strategy_v2/backtesting/*",
]

[tool.coverage.report]
fail_under = 70
precision = 2
skip_empty = true
exclude_lines = [
    "@(abc\\.)?abstractmethod",
    "if TYPE_CHECKING:",
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "if 0:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if settings.DEBUG",
    "except asyncio.exceptions.TimeoutError:",
]

[tool.coverage.html]
directory = "coverage_html_report"
show_contexts = true

[tool.coverage.xml]
output = "coverage.xml"
