[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
# Fail any single test that runs longer than this (seconds) instead of hanging the
# whole CI run. Uses the SIGALRM-based method so a timed-out test raises in the main
# thread and the suite continues, surfacing every real failure in one run.
timeout = 120
timeout_method = "signal"

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[build-system]
requires = ["setuptools", "wheel", "numpy>=2.2.6", "cython>=3.0.12"]
build-backend = "setuptools.build_meta"

[tool.isort]
line_length = 120
multi_line_output = 3
include_trailing_comma = true
use_parentheses = true
ensure_newline_before_comments = true
combine_as_imports = true
conda_env = "hummingbot"
filter_files = true
skip = ["setup.py"]
